--- a/main.css
+++ b/main.css
@@ -1,3 +1,68 @@
-.sho{
-    color: red;
+.header-container {
+}
+
+.navbar {
+}
+
+.navbar__logo {
+}
+
+.navbar__menu {
+}
+
+.header-content {
+}
+
+.header-content__subtitle {
+}
+
+.header-content__title {
+}
+
+.header-content__text {
+}
+
+.header-content__buttons {
+}
+
+.common-button {
+}
+
+.common-button_light {
+}
+
+.projects-title {
+}
+
+.project-card {
+}
+
+.project-card__content {
+}
+
+.project-card__title {
+}
+
+.project-card__text {
+}
+
+.project-card__button {
+}
+
+.stylized-button {
+}
+
+.project-card__picture {
+}
+
+.message-form {
+}
+
+.society {
+}
+
+.society__item {
+}
+
+.some-text {
 }
