--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@ header {
     background: url("img/header-background.png") right top;
     background-repeat: no-repeat;
     height: 629px;
+    width: 1200px;
     margin-bottom: 144px;
 
 }
