--- a/about/about.css
+++ b/about/about.css
@@ -24,7 +24,9 @@ body{
 header {
 }
 .header-container {
-    margin: 0 120px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .navbar {
