--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body{
 }
 
 header {
-    background: url("img/image.jpg") right top;
+    background: url("img/pexels-artem-beliaikin-1832323-removebg-preview _firstimg.jpg") right top;
     background-repeat: no-repeat;
     height: 629px;
     margin-bottom: 144px;
